Completed Day 6 with all tasks

--- a/Advent of Code/Advent of Code.fsproj
+++ b/Advent of Code/Advent of Code.fsproj
@@ -7,17 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Tasks\Day6Task.txt" />
+    <Content Include="tasks\Day4Task.txt" />
     <Content Include="tasks\Day3Task.txt" />
     <Content Include="tasks\Day2Task.txt" />
     <Content Include="tasks\Day1Task.txt" />
+    <Compile Include="Days\Day6.fs" />
+    <Compile Include="Days\Day4.fs" />
     <Compile Include="Days\Day3.fs" />
     <Compile Include="Days\Day2.fs" />
     <Compile Include="Days\Day1.fs" />
     <Compile Include="Program.fs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Tasks\" />
   </ItemGroup>
 
 </Project>
